feat: add new queries to fetch article and tag data
